# test-poetry

./: .flake8  noxfile.py  pyproject.toml
test_poetry/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_poetry.py  test_wikipedia.py
