[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = "a repo used to test poetry"
authors = ["YangyangLI <li002252@umn.edu>"]


[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test-p = "test_poetry.console:main"
