[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = "a repo used to test poetry"
authors = ["YangyangLI <li002252@umn.edu>"]


[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"
more-itertools = "^8.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^5.3.1"}
pytest-cov = "^2.10.1"
pytest-mock = "^3.4.0"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
safety = "^1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test-p = "test_poetry.console:main"

[tool.coverage.paths]
source = ["test_poetry", "*/site-packages" ]

[tool.coverage.run]
branch = true
source = ["test_poetry"]

[tool.coverage.report]
show_missing = true
fail_under = 100
